--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Expires" content="0" />
   <title>Yda Dex</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:Regular 400,Bold 700|Pragati+Narrow:400,700">
-  <link rel="icon" type="favicon" href="https://raw.githubusercontent.com/ydarissep/dex-core/main/sprites/Pok%C3%A9_Ball_icon.png">
+  <link rel="icon" type="favicon" href="https://raw.githubusercontent.com/ydarissep/dex-core/main/sprites/Pok%C3%A9_Ball_icon.ico">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style/speciesTable.css">
   <link rel="stylesheet" href="style/abilitiesTable.css">
