--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <link rel="stylesheet" href="style/itemsTable.css">
   <link rel="stylesheet" href="style/speciesPanel.css">
   <link rel="stylesheet" href="style/strategies.css">
+  <script defer src="GIFEncoder/LZWEncoder.js"></script>
+  <script defer src="GIFEncoder/NeuQuant.js"></script>
+  <script defer src="GIFEncoder/GIFEncoder.js"></script>
+  <script defer src="GIFEncoder/b64.js"></script>
   <script defer src="src/species/displaySpecies.js"></script>
   <script defer src="src/species/fetchSpecies.js"></script>
   <script defer src="src/species/regexSpecies.js"></script>
