--- a/index.html
+++ b/index.html
@@ -49,4 +49,14 @@
   <script defer src="src/speciesPanelUtility.js"></script>
   <script defer src="src/global.js"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9QQEVJH44E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9QQEVJH44E');
+</script>
+
 </html>
