Added events (and some items implementation, not finished)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="style/locationsTable.css">
   <link rel="stylesheet" href="style/trainersTable.css">
   <link rel="stylesheet" href="style/itemsTable.css">
+  <link rel="stylesheet" href="style/eventsTable.css">
   <link rel="stylesheet" href="style/speciesPanel.css">
   <link rel="stylesheet" href="style/strategies.css">
   <script defer src="GIFEncoder/LZWEncoder.js"></script>
@@ -35,6 +36,9 @@
   <script defer src="src/locations/displayLocations.js"></script>
   <script defer src="src/locations/fetchLocations.js"></script>
   <script defer src="src/locations/regexLocations.js"></script>
+  <script defer src="src/events/displayEvents.js"></script>
+  <script defer src="src/events/fetchEvents.js"></script>
+  <script defer src="src/events/regexEvents.js"></script>
   <script defer src="src/scripts/displayTrainers.js"></script>
   <script defer src="src/scripts/displayItems.js"></script>
   <script defer src="src/scripts/fetchScripts.js"></script>
